RESOLVED FIXED39159
WKCACFLayerRenderer::resetDevice might fail due to failing to destroy all D3DPOOL_DEFAULT resources
https://bugs.webkit.org/show_bug.cgi?id=39159
Summary WKCACFLayerRenderer::resetDevice might fail due to failing to destroy all D3D...
Adam Roben (:aroben)
Reported 2010-05-15 06:04:49 PDT
Created attachment 56150 [details] Patch MSDN says we have to delete all D3DPOOL_DEFAULT resources before calling IDirect3DDevice9::Reset, but we aren't doing this in all cases.
Attachments
Patch (2.53 KB, patch)
2010-05-15 06:04 PDT, Adam Roben (:aroben)
sullivan: review+
Adam Roben (:aroben)
Comment 1 2010-05-15 06:09:12 PDT
Eric Seidel (no email)
Comment 2 2010-05-16 00:37:34 PDT
Attachment 56150 [details] was posted by a committer and has review+, assigning to Adam Roben for commit.
Adam Roben (:aroben)
Comment 3 2010-05-17 08:07:45 PDT
Note You need to log in before you can comment on or make changes to this bug.