third_party/WebKit/WebCore/platform/graphics/win/WKCACFLayerRenderer.cpp
@@ -549,7 +549,6 @@ void WKCACFLayerRenderer::render(const Vector<CGRect>& dirtyRects)
 
         if (err == D3DERR_DEVICELOST) {
             // Lost device situation.
-            CARenderOGLPurge(m_renderer);
             resetDevice();
             CARenderUpdateAddRect(u, &bounds);
         }
@@ -597,6 +596,11 @@ void WKCACFLayerRenderer::initD3DGeometry()
 void WKCACFLayerRenderer::resetDevice()
 {
     ASSERT(m_d3dDevice);
+
+    // We have to purge the CARenderOGLContext whenever we reset the IDirect3DDevice9 in order to
+    // destroy any D3DPOOL_DEFAULT resources that Core Animation has allocated (e.g., textures used
+    // for mask layers). See <http://msdn.microsoft.com/en-us/library/bb174425(v=VS.85).aspx>.
+    CARenderOGLPurge(m_renderer);
 
     D3DPRESENT_PARAMETERS parameters = initialPresentationParameters();
     m_d3dDevice->Reset(&parameters);
